# Xautopost

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  error-log-x-auto-post.md  package-lock.json  package.json  requirement.md  test_compose.py  test_dom.py  test_fileinput.py  test_reply_action.py  test_reply_click.py  test_reply_dom.py  test_screenshot.py  test_small_window.py
.github/workflows/: build-release.yml  build.yml  pages.yml
backend/: build.spec  pyproject.toml
backend/app/: main.py
backend/app/api/: accounts.py  api_keys.py  deps.py  logs.py  media.py  operators.py  prompts.py  proxies.py  tweets.py
backend/app/core/: config.py  crypto.py  passwords.py
backend/app/db/: database.py  models.py  utils.py
backend/app/services/: ai.py  manual.py  media.py  playwright_login.py  poster.py  scheduler.py  tweet_scanner.py
backend/scripts/: render_icon.py  render_manual.py
desktop/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
desktop/scripts/: build-backend.cjs
desktop/src/main/: index.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: App.tsx  index.css  index.html
desktop/src/renderer/components/: AccountSettingsModal.tsx  AutoSwitch.tsx  ConfirmDialog.tsx  EmptyState.tsx  IntervalPicker.tsx  Logo.tsx  Mascot.tsx  MediaPicker.tsx  Modal.tsx  StylePicker.tsx  TestPostModal.tsx  TweetPickerModal.tsx
desktop/src/renderer/lib/: account-state.ts  api.ts  (+1 more)
docs/: index.html
manual/: manual.html
web/: index.html
(+5 files in other folders)
